3.1.9 - 17/10/2016
Updated:
- Switch to default version 1.16 for msb repository

3.1.8 - 11/10/2016
Added:
- Feature rebuild packages for sbo repository and reinstall binaries packages
- Slackware package management tools. Thanks to Thomas Szteliga #71 
Fixed:
- Print repository error message without usage
- Count packages in deps-status option
Updated:
- Help and usage message
- Slackware mirrors
- Merge --deps in --check-deps flag in the remove argument

3.1.7 - 14/07/2016
Fixed:
- Update only one repository and check and upgrade packages from it #69

3.1.6 - 06/07/2016
Updated:
- Slackr (Conraid's) repository url
- Remove aaa_elflibs from blacklist
- Slackware mirrors

3.1.5 - 26/05/2016
Fixed:
- Option "-l, --list" working with all arguments
- TypeError: in tracking option when working with binaries repositories
Updated:
- Code style

3.1.4 - 11/05/2016
Updated:
- slackers.it default repository

3.1.3 - 15/04/2016
Fixed:
- Working with localy SBo repository

3.1.2 - 24/02/2016
Fixed:
- AttributeError: LooseVersion instance has no attribute 'version'
- Remove double code

3.1.1 - 23/02/2016
Added:
- Feature: don't downgrade packages, setting via configuration file

3.1.0 - 17/02/2016
Fixed:
- Downloaded packages for x86 arch in the "slonly" repository #59
- Continue build and install sbo packages if source link is dead
Updated:
- Status toolbar

3.0.9 - 09/02/2016
Fixed:
- Listed installed packages from repositories with the name only #58
- Passing char '+' from sources

3.0.8 - 29/01/2016
Added:
- Flag "--name" in option list to show only package name
Fixed:
- Duplicate packages in repository ktown with option list

3.0.7 - 26/01/2016
Updated:
- Help menu
- Positions arguments in "deps-status" for "--tree" and "--graph=" options
- Slackware mirrors

3.0.6 - 22/01/2016
Fixed:
- "IndexError: list index out of range" when remove packages with "--tag" option
Updated:
- README.rst file
- Usage and help options