@@ -23,6 +23,7 @@
 
 
 from slpkg.utils import Utils
+from slpkg.toolbar import status
 from slpkg.splitting import split_package
 from slpkg.__metadata__ import MetaData as _meta_
 
@@ -35,6 +36,8 @@ def repo_data(PACKAGES_TXT, repo, flag):
     (name, location, size, unsize,
      rname, rlocation, rsize, runsize) = ([] for i in range(8))
     for line in PACKAGES_TXT.splitlines():
+        if _meta_.rsl_deps in ["on", "ON"] and "--resolve-off" not in flag:
+            status(0.000005)
         if line.startswith("PACKAGE NAME:"):
             name.append(line[15:].strip())
         if line.startswith("PACKAGE LOCATION:"):
